--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -24,3 +24,21 @@
   max-width: 360px;
   height: 80px;
 }
+
+.banner_button {
+  cursor: pointer;
+  color: #fff;
+  outline: none;
+  border: none;
+  font-weight: 700;
+  border-radius: 0.2vw;
+  padding: 0.5rem 2rem;
+  margin-right: 1rem;
+  background-color: rgba(51, 51, 51, 0.5);
+  transition: all 0.2s;
+}
+
+.banner_button:hover {
+  color: #000;
+  background-color: #fff;
+}
