--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -42,3 +42,13 @@
   color: #000;
   background-color: #fff;
 }
+
+.banner--fadeBottom {
+  height: 7.4rem;
+  background-image: linear-gradient(
+    180deg,
+    transparent,
+    rgba(37, 37, 37, 0.61),
+    #111
+  );
+}
